--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-color: #f0f0f0;
             margin: 0;
             padding: 0;
-	    background-image: url(fundo.jpg);
+	    background-image: url(img/fundo.jpg);
 	    background-repeat: no-repeat; 
 	    background-size: cover;
 	}
