--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             padding: 0;
 	    background-image: url('img/fundo.jpg');
 	    background-repeat: no-repeat; 
-	    background-size: cover;
+	    background-size: 100vw 100vh;
 	}
     </style>
 </head>
