--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
 </head>
 <body>
 	<h1>Liga Comunista Brasileira</h1>
+
+<!-- Default Statcounter code for Site LCB https://ligacomunistabrasileira.org
+-->
+<script type="text/javascript">
+var sc_project=13132595; 
+var sc_invisible=1; 
+var sc_security="c54e3816"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13132595/0/c54e3816/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
 
