--- a/index.html
+++ b/index.html
@@ -10,21 +10,45 @@
   	    }
 	}
 
+p {
+      margin-top: 20px; /* Adiciona 20 pixels de espaço acima do parágrafo */
+	    }
+
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            color: #cc0000;
-            background-color: #f0f0f0;
+/*            text-align: center;*/
             margin: 0;
             padding: 0;
-	    background-image: url('img/fundo.jpg');
+	    background-image: url('img/fundo2.jpg');
 	    background-repeat: no-repeat; 
 	    background-size: 100vw 100vh;
 	}
     </style>
+    <link rel="stylesheet" href="assets/style/styles.css">
 </head>
 <body>
-	<h1>Liga Comunista Brasileira</h1>
+	<div class="container">
+	<img src="img/logo.png" class="center">
+		<p>A Iniciativa Comunista e a Organização Comunista Arma da Crítica completaram com êxito seu processo de Unificação em Conferência realizada em Campinas, nos dias 26 e 27 de abril. Surge a Liga Comunista Brasileira – LCB.</p>
+
+		<p>A LCB reivindica a tradição dos comunistas desde 1922, se propõe a defender as aspirações da classe trabalhadora no Brasil. É uma organização que tem o socialismo no seu horizonte estratégico, ao mesmo tempo que trabalha para dar coesão às lutas cotidianas dos trabalhadores e do povo.</p>
+
+		<p>No artigo 2o dos seus estatutos, aprovados na Conferência de Unificação, a LCB “tem como princípios":</p>
+		<ol type="a">
+			<li>a defesa incondicional das aspirações e interesses da classe trabalhadora;</li>
+			<li>o internacionalismo proletário e a autodeterminação dos povos;</li>
+			<li>a luta antiimperialista e antifascista; d) a defesa da soberania nacional e das liberdades democráticas;</li>
+			<li>a unidade da luta dos trabalhadores e dos setores populares contra a exploração e a opressão;</li>
+			<li>o acesso à terra para quem nela trabalha e a preservação do meio ambiente;</li>
+			<li>a defesa dos povos indígenas, quilombolas e populações ribeirinhas à terra, a água e a seus modos de vida tradicionais;</li>
+			<li>a emancipação da mulher, a superação do racismo, da LGBTFobia, do capacitismo e do etarismo;</li>
+			<li>a luta por uma sociedade justa, fraterna e solidária, a sociedade socialista, rumo ao comunismo.”</li>
+
+		</ol>
+		<p>Desde já, a LCB quer estabelecer o diálogo com outras organizações comunistas e de esquerda para construir uma pauta comum de lutas. A LCB conclama a classe trabalhadora a desenvolver suas lutas e organização, no rumo de retomar o protagonismo dos trabalhadores e do povo na cena nacional.</p>
+
+		<p>Viva a Liga Comunista Brasileira!</p>
+	</div>
+
 
 <!-- Default Statcounter code for Site LCB https://ligacomunistabrasileira.org
 -->
