--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ p {
 /*            text-align: center;*/
             margin: 0;
             padding: 0;
-	    background-image: url('img/fundo2.jpg');
+	    background-image: url('img/fundo.jpg');
 	    background-repeat: no-repeat; 
 	    background-size: 100vw 100vh;
 	}
